--- a/Assets/css/sidebar.css
+++ b/Assets/css/sidebar.css
@@ -30,6 +30,7 @@ body {
 
 .main {
     min-height: 100vh;
+    margin-left: 70px;
     width: 100%;
     overflow: hidden;
     transition: all 0.35s ease-in-out;
@@ -40,12 +41,13 @@ body {
     width: 70px;
     min-width: 70px;
     z-index: 1000;
+    height: 100vh;
+    position: fixed;
     transition: all .25s ease-in-out;
     background-color: #0e2238;
     display: flex;
     flex-direction: column;
 }
-
 #sidebar.expand {
     width: 260px;
     min-width: 260px;
