--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -71,3 +71,38 @@
     display: none;
 }
 /* login css end  */
+.feature-image
+{
+    border-radius: 10px;
+    height: 100px;
+    width: 100px;
+}
+.img
+{
+    width: 100%;
+    height: auto;
+}
+.img2
+{
+    width: 100%;
+}
+.table
+{
+    height: 250px;
+    background-color: #f5f5f5;
+    overflow: auto;
+    border-radius: 10px;
+}
+.form-group .form-label,
+.form-group .form-control
+{
+    display: inline;
+}
+.form-group .form-control
+{
+    width: 80%;
+}
+.form
+{
+
+}
