--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -80,7 +80,7 @@
 .img
 {
     width: 100%;
-    height: auto;
+    height: 500px;
 }
 .img2
 {
@@ -93,16 +93,34 @@
     overflow: auto;
     border-radius: 10px;
 }
+.table-responsive
+{
+    height: 250px;
+    overflow-y: scroll;
+}
+.select2-container--default .select2-selection--single
+{
+    border: none;
+}
+span.select2.select2-container.select2-container--default.select2-container--below {
+    display: block;
+    width: 100%;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+}
 .form-group .form-label,
 .form-group .form-control
 {
     display: inline;
 }
-.form-group .form-control
+.form-control
 {
-    width: 80%;
-}
-.form
-{
-
+    width: 50%;
 }
